editing catalog demo

--- a/catalog_demo.ipynb
+++ b/catalog_demo.ipynb
@@ -13,23 +13,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "afebdd7b-42e6-4f0a-990f-09febd00e3f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.1692381 , -1.72915534, -1.45609692, -1.11479882,  1.41482102,\n",
+       "        0.61621097,  1.12424283, -1.86862555, -0.7578921 ,  0.68565804,\n",
+       "        0.88172743, -0.48606081, -0.81200963, -1.25499349,  0.62793274,\n",
+       "       -1.39255497,  1.95240118, -0.40295269, -1.35488795,  0.52041031,\n",
+       "        0.44739228,  0.04669693, -0.82765111,  0.23180888, -1.98146537,\n",
+       "       -0.62577869,  1.3587298 , -1.57621298,  1.2797852 ,  1.16504999,\n",
+       "       -0.36763156, -1.28262328,  1.82124162,  0.91536305,  1.42013968,\n",
+       "       -0.94613201, -0.39502179, -0.53475758,  0.19507593,  0.46270097,\n",
+       "       -0.72080246, -0.47890808, -0.16641902, -0.61921598,  1.55573564,\n",
+       "       -0.62746822,  1.58035789,  1.12892649,  0.46134686, -0.46944157,\n",
+       "       -0.87542673,  0.20657184, -0.35420481, -0.65330521, -0.37502621,\n",
+       "       -0.50802304, -0.03648293,  1.30780951, -0.11615904,  0.6812453 ,\n",
+       "        0.05069008, -0.46040349, -0.40624491,  0.58039828, -1.18237651,\n",
+       "        0.26132494, -0.63809033, -0.54884639, -0.2487858 ,  0.33917304,\n",
+       "       -0.32181711, -0.4245192 ,  0.25404115, -0.60544797,  1.19424482,\n",
+       "       -0.6042583 ,  0.22986375, -0.73871859,  0.75832309,  0.12647776,\n",
+       "       -0.85912821, -0.19255782,  1.13072079, -0.10355543,  0.82306031,\n",
+       "        0.12046885, -0.73754421,  0.67008287, -0.63436934,  0.65648257,\n",
+       "       -1.54383628,  1.26781233, -1.096688  , -0.24407704, -0.20421659,\n",
+       "        1.42054096,  0.51734434, -2.11730039,  0.82739491,  0.61363108])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# example code with output\n",
     "import numpy as np\n",
-    "np.random"
+    "np.random.normal(size=100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "173e7001-507d-4c9a-baf3-674fdabc7ddc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
